# Copyright 2022 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

assert(is_fuchsia, "These can only be defined in the default toolchain")

# This was moved here from //bundles:kitchen_sink
group("kitchen_sink") {
  if (current_toolchain == default_toolchain) {
    print(
        "WARNING: //bundles:kitchen_sink is not maintained and is not a reliable way of including all targets in a build.")
    print(
        "         To approximate infra, use buildbot bundles (//bundles/buildbot/*)")
  }
  testonly = true
  public_deps = [
    "//bundles/tests",
    "//examples",
    "//src/graphics/examples",
    "//src/lib/ui/carnelian:examples",
    "//src/media/bundles:examples",
    "//src/media/bundles:services",
  ]
}
