# Copyright 2022 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

assert(is_fuchsia, "This can only be included in default_toolchain contexts")

# This group is for tools in packages that should be compiled for Fuchsia
group("tools") {
  testonly = true
  public_deps = [
    "//src/camera:tools",
    "//src/connectivity/bluetooth/tools",
    "//src/developer/debug/debug_agent",
    "//src/developer/fastboot",
    "//src/developer/ffx/plugins/speedtest/target:speedtest",
    "//src/devices/bundles:tools",
    "//src/graphics/display:tools",
    "//src/graphics/lib/magma:magma-tools",
    "//src/performance/trace",
    "//src/recovery/factory_reset:tools",
    "//src/storage:tools",
    "//src/sys/pkg/bin/far",
    "//src/sys/tools/activity-ctl",
    "//src/sys/tools/log",
    "//src/ui/tools:scenic",
    "//third_party/boringssl:boringssl_tool",
    "//third_party/curl:curl_pkg",
    "//third_party/iperf:iperf3_pkg",
    "//third_party/openssh-portable:scp-shell-pkg",
    "//third_party/openssh-portable:ssh-keygen-shell-pkg",
    "//third_party/openssh-portable:ssh-shell-pkg",
  ]
  deps = [ "//build/validate:non_production_tag" ]

  # These are libraries that were being included in tools?
  # "//src/security/lib/scrutiny",
}

# This group is for host tools.
_host_tools = [
  "//build/tools/formatjson5:install",
  "//src/developer/debug/zxdb:zxdb",
  "//src/diagnostics/triage:install",
  "//src/lib/chunked-compression:chunked-compress-host-tool",
  "//src/lib/icu/tools/extractor:host",
  "//src/performance/lib/trace_processing:run_cpu_breakdown",
  "//src/performance/lib/trace_processing:run_graphics_metrics",
  "//src/performance/trace2json",
  "//src/storage:host_tools",
  "//src/sys/pkg/bin/far:host",
  "//tools",
  "//tools/check-licenses:host",
  "//tools/whereiscl:host",
]
group("host_tools") {
  testonly = true
  public_deps = []
  foreach(dep, _host_tools) {
    public_deps += [ "${dep}($host_toolchain)" ]
  }
}
