# Copyright 2020 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("diagnostics") {
  testonly = true
  deps = [
    "inspect",
    "logs",
  ]
}

group("hermetic_tests") {
  testonly = true
  deps = [
    "inspect:hermetic_tests",
    "logs:hermetic_tests",
  ]
}
