# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/bazel/bazel_test_package_group.gni")

group("drivers") {
  testonly = true
  deps = [
    "bind/bindlib_codegen",
    "bind/fidl_bindlib_codegen",
    "driver_test_realm/sample-driver",
    "metadata:drivers",
    "simple/dfv1:pkg",
    "simple/dfv2:bazel_package",
    "simple/rust:pkg",
    "skeleton:pkg",
    "template:bazel_package",
    "transport",
  ]
}

group("hermetic_tests") {
  testonly = true
  deps = [
    "driver_test_realm:hermetic_tests",
    "metadata:hermetic_tests",
    "simple/rust:hermetic_tests",
    "transport:hermetic_tests",
  ]
}
